--- a/capstoneProject.ipynb
+++ b/capstoneProject.ipynb
@@ -11,6 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Important note \n",
+    "It is highly probable that the output of the displayed output of the code does not match the result announced "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Packages import"
    ]
   },
@@ -174,18 +182,6 @@
     "                                          'Longitude': neighborhood_lon}, ignore_index=True)\n",
     "\n",
     "neighborhoods.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#neighborhoods.loc[neighborhoods[\"Neighborhood\"] == 'Picpus'].drop()\n",
-    "ind = neighborhoods.loc[neighborhoods[\"Neighborhood\"] == 'Picpus'].index\n",
-    "\n",
-    "neighborhoods.drop(index = ind, inplace = True)"
    ]
   },
   {
@@ -5008,13 +5004,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
@@ -5633,7 +5622,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The borough \"Bonne-Nouvelle\" will see its first Italian restaurant opening in a few months :)"
+    "The borough \"Folie-Méricourt\" will see its first Italian restaurant opening in a few months :)"
    ]
   }
  ],
